--- a/package.json
+++ b/package.json
@@ -9,12 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "@clerk/nextjs": "^6.12.0",
+    "@google/generative-ai": "^0.21.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "embla-carousel-react": "^8.5.2",
+    "inngest": "^3.31.3",
+    "lucide-react": "^0.469.0",
+    "next": "15.0.3",
+    "next-themes": "^0.4.4",
+    "pg": "^8.13.3",
+    "react": "^18",
+    "react-card-flip": "^1.2.3",
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.3",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/react": "19.0.4",
+    "drizzle-kit": "^0.30.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
